2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (drawLeftLabels): Adjust label area for interiorGap,
    (drawRightLabels): Likewise.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/HighLowItemLabelGenerator.java:
    (hashCode): Implemented,
    * source/org/jfree/chart/labels/MultipleXYSeriesLabelGenerator.java: 
    Likewise,
    * source/org/jfree/chart/labels/StandardCategorySeriesLabelGenerator.java:
    Likewise,
    * source/org/jfree/chart/labels/StandardXYSeriesLabelGenerator.java:
    Likewise,
    * source/org/jfree/chart/labels/SymbolicXYItemLabelGenerator.java:
    Likewise.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
    (getSubplots): Return null if this.subplots is null,
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java: Likewise,
    * source/org/jfree/chart/plot/CombinedRangeCategoryPlot.java: Likewise,
    * source/org/jfree/chart/plot/CombinedRangeXYPlot.java: Likewise.

2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateRangeBounds(CategoryDataset, boolean)): Modified implementation,
    (iterateRangeBounds(XYDataset, boolean)): Likewise,
    * tests/org/jfree/data/general/junit/DatasetUtilitiesTests.java
    (testFindRangeBounds3): New test,
    (testIterateCategoryRangeBounds): Renamed 
    testIterateRangeBounds_CategoryDataset(),
    (testIterateRangeBounds2_CategoryDataset): New method,
    (testIterateRangeBounds3_CategoryDataset): Likewise,
    (testIterateXYRangeBounds): Renamed testIterateRangeBounds(),
    (testIterateXYRangeBounds2): Renamed testIterateRangeBounds2(),
    (testIterateRangeBounds3): New method,
    (testIterateRangeBounds4): Likewise,
    (testCumulativeRange3): Likewise,
    (testSampleFunction2D): Likewise.
